force-app/main/default/objects/Deployment_Tracking__c/Deployment_Tracking__c.object-meta.xml
<CustomObject>
    <label>Deployment Tracking</label>
    <nameField>
        <label>Deployment Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>