force-app/main/default/objects/Deployment_Tracking__c/fields/AAA_Version__c.field-meta.xml
<CustomField>
    <fullName>AAA_Version__c</fullName>
    <description>Version of the AAA associated with a certain deployment.</description>
    <label>AAA Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>