force-app/main/default/objects/Deployment_Tracking__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>The account name associated with a certain deployment.</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deployment Tracking</relationshipLabel>
    <relationshipName>Deployment_Detail_Tracking</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>