force-app/main/default/objects/Deployment_Tracking__c/fields/Analytics_Version__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Version__c</fullName>
    <label>Analytics Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>