force-app/main/default/objects/Deployment_Tracking__c/fields/Application_Version__c.field-meta.xml
<CustomField>
    <fullName>Application_Version__c</fullName>
    <label>Application Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>