force-app/main/default/objects/Deployment_Tracking__c/fields/AUC_Version__c.field-meta.xml
<CustomField>
    <fullName>AUC_Version__c</fullName>
    <description>Version of the AUC associated with a certain deployment.</description>
    <label>AUC Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>