force-app/main/default/objects/Deployment_Tracking__c/fields/BGCF_Stateful_Version__c.field-meta.xml
<CustomField>
    <fullName>BGCF_Stateful_Version__c</fullName>
    <description>Version of the BGCF-Stateful associated with a certain deployment.</description>
    <label>BGCF-Stateful Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>