force-app/main/default/objects/Deployment_Tracking__c/fields/BGCF_Stateless_Version__c.field-meta.xml
<CustomField>
    <fullName>BGCF_Stateless_Version__c</fullName>
    <description>Version of the BGCF-Stateless associated with a certain deployment.</description>
    <label>BGCF-Stateless Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>