force-app/main/default/objects/Deployment_Tracking__c/fields/Bridge_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Additional_Information__c</fullName>
    <description>If there is more information regarding the Bridge, it can be put into this field.</description>
    <label>Bridge Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>