force-app/main/default/objects/Deployment_Tracking__c/fields/Bridge_Cots__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Cots__c</fullName>
    <description>Indicates whether or not the Bridge is using COTS.</description>
    <label>Bridge COTS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COTS</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>