force-app/main/default/objects/Deployment_Tracking__c/fields/Bridge_OS_Version__c.field-meta.xml
<CustomField>
    <fullName>Bridge_OS_Version__c</fullName>
    <description>Version of the Bridge OS associated with a certain deployment.</description>
    <label>Bridge OS Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>