force-app/main/default/objects/Deployment_Tracking__c/fields/Bridge_TITAN_Version__c.field-meta.xml
<CustomField>
    <fullName>Bridge_TITAN_Version__c</fullName>
    <description>Version of the Bridge TITAN associated with a certain deployment.</description>
    <label>Bridge TITAN Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>