force-app/main/default/objects/Deployment_Tracking__c/fields/CNAM_Broker_Version__c.field-meta.xml
<CustomField>
    <fullName>CNAM_Broker_Version__c</fullName>
    <description>Version of the CNAM-Broker associated with a certain deployment.</description>
    <label>CNAM-Broker Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>