force-app/main/default/objects/Deployment_Tracking__c/fields/CRE_Version__c.field-meta.xml
<CustomField>
    <fullName>CRE_Version__c</fullName>
    <description>Version of the CRE associated with a certain deployment.</description>
    <label>CRE Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>