force-app/main/default/objects/Deployment_Tracking__c/fields/CSCF_Version__c.field-meta.xml
<CustomField>
    <fullName>CSCF_Version__c</fullName>
    <description>Version of the CSCF associated with a certain deployment.</description>
    <label>CSCF Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>