force-app/main/default/objects/Deployment_Tracking__c/fields/DIAMETER_FW_Version__c.field-meta.xml
<CustomField>
    <fullName>DIAMETER_FW_Version__c</fullName>
    <description>Version of the DIAMETER-FW associated with a certain deployment.</description>
    <label>DIAMETER-FW Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>