force-app/main/default/objects/Deployment_Tracking__c/fields/Diameter_Transformation_Version__c.field-meta.xml
<CustomField>
    <fullName>Diameter_Transformation_Version__c</fullName>
    <description>Version of the Diameter Transformation associated with a certain deployment.</description>
    <label>Diameter Transformation Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>