force-app/main/default/objects/Deployment_Tracking__c/fields/DSC_Version__c.field-meta.xml
<CustomField>
    <fullName>DSC_Version__c</fullName>
    <description>Version of the DSC associated with a certain deployment.</description>
    <label>DSC Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>