force-app/main/default/objects/Deployment_Tracking__c/fields/Edge_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Edge_Additional_Information__c</fullName>
    <description>If there is more information regarding the edge, it can be put into this field.</description>
    <label>Edge Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>