force-app/main/default/objects/Deployment_Tracking__c/fields/Edge_OS_Linux__c.field-meta.xml
<CustomField>
    <fullName>Edge_OS_Linux__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is checked if the Edge OS is Linux.</description>
    <label>Edge OS - Linux</label>
    <type>Checkbox</type>
</CustomField>