force-app/main/default/objects/Deployment_Tracking__c/fields/Edge_OS_Solaris__c.field-meta.xml
<CustomField>
    <fullName>Edge_OS_Solaris__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is checked if the Edge OS is Solaris.</description>
    <label>Edge OS - Solaris</label>
    <type>Checkbox</type>
</CustomField>