force-app/main/default/objects/Deployment_Tracking__c/fields/Edge_OS_Version__c.field-meta.xml
<CustomField>
    <fullName>Edge_OS_Version__c</fullName>
    <description>Version of the Edge OS associated with a certain deployment.</description>
    <label>Edge OS Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>