force-app/main/default/objects/Deployment_Tracking__c/fields/Edge_TITAN_Version__c.field-meta.xml
<CustomField>
    <fullName>Edge_TITAN_Version__c</fullName>
    <description>Version of the Edge TITAN associated with a certain deployment.</description>
    <label>Edge TITAN Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>