force-app/main/default/objects/Deployment_Tracking__c/fields/Edge_VM_Cots__c.field-meta.xml
<CustomField>
    <fullName>Edge_VM_Cots__c</fullName>
    <description>The type of VM or COTS that the Edge is using.</description>
    <label>Edge VM/COTS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VM_Cots</valueSetName>
    </valueSet>
</CustomField>