force-app/main/default/objects/Deployment_Tracking__c/fields/EIR_Version__c.field-meta.xml
<CustomField>
    <fullName>EIR_Version__c</fullName>
    <description>Version of the EIR associated with a certain deployment.</description>
    <label>EIR Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>