force-app/main/default/objects/Deployment_Tracking__c/fields/EMS_OS_Version__c.field-meta.xml
<CustomField>
    <fullName>EMS_OS_Version__c</fullName>
    <label>EMS OS Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>