force-app/main/default/objects/Deployment_Tracking__c/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is for the end consumer of the product for Partner related deployments.</description>
    <label>End Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deployments Contracted Through Partner</relationshipLabel>
    <relationshipName>Deployment_Detail_Tracking1</relationshipName>
    <type>Lookup</type>
</CustomField>