force-app/main/default/objects/Deployment_Tracking__c/fields/ENUM_DNS_Version__c.field-meta.xml
<CustomField>
    <fullName>ENUM_DNS_Version__c</fullName>
    <description>Version of the ENUM-DNS associated with a certain deployment.</description>
    <label>ENUM-DNS Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>