force-app/main/default/objects/Deployment_Tracking__c/fields/ENUM_Messaging_Version__c.field-meta.xml
<CustomField>
    <fullName>ENUM_Messaging_Version__c</fullName>
    <description>Version of the ENUM Messaging associated with a certain deployment.</description>
    <label>ENUM_Messaging Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>