force-app/main/default/objects/Deployment_Tracking__c/fields/Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date__c</fullName>
    <description>The date the deployment was deployed to the customer.</description>
    <label>Go Live Date</label>
    <type>Date</type>
</CustomField>