force-app/main/default/objects/Deployment_Tracking__c/fields/HLR_Version__c.field-meta.xml
<CustomField>
    <fullName>HLR_Version__c</fullName>
    <description>Version of the HLR associated with a certain deployment.</description>
    <label>HLR Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>