force-app/main/default/objects/Deployment_Tracking__c/fields/HP_Firmware__c.field-meta.xml
<CustomField>
    <fullName>HP_Firmware__c</fullName>
    <description>The HP Firmware associated with a certain deployment.</description>
    <label>HP Firmware</label>
    <length>100</length>
    <type>Text</type>
</CustomField>