force-app/main/default/objects/Deployment_Tracking__c/fields/HSS_Version__c.field-meta.xml
<CustomField>
    <fullName>HSS_Version__c</fullName>
    <description>Version of the HSS associated with a certain deployment.</description>
    <label>HSS Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>