force-app/main/default/objects/Deployment_Tracking__c/fields/HTTP_REST_Version__c.field-meta.xml
<CustomField>
    <fullName>HTTP_REST_Version__c</fullName>
    <description>Version of the HTTP/REST associated with a certain deployment.</description>
    <label>HTTP/REST Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>