force-app/main/default/objects/Deployment_Tracking__c/fields/IN_SCP_Version__c.field-meta.xml
<CustomField>
    <fullName>IN_SCP_Version__c</fullName>
    <description>Version of the IN_SCP associated with a certain deployment.</description>
    <label>IN_SCP Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>