force-app/main/default/objects/Deployment_Tracking__c/fields/Kubernetes_Environment__c.field-meta.xml
<CustomField>
    <fullName>Kubernetes_Environment__c</fullName>
    <label>Kubernetes Environment</label>
    <type>TextArea</type>
</CustomField>