force-app/main/default/objects/Deployment_Tracking__c/fields/Kubernetes_Version__c.field-meta.xml
<CustomField>
    <fullName>Kubernetes_Version__c</fullName>
    <label>Kubernetes Version</label>
    <type>TextArea</type>
</CustomField>