force-app/main/default/objects/Deployment_Tracking__c/fields/LRF_Version__c.field-meta.xml
<CustomField>
    <fullName>LRF_Version__c</fullName>
    <description>Version of the LRF associated with a certain deployment.</description>
    <label>LRF Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>