force-app/main/default/objects/Deployment_Tracking__c/fields/Master_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Master_Additional_Information__c</fullName>
    <description>If there is more information regarding the Master, it can be put into this field.</description>
    <label>Master Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>