force-app/main/default/objects/Deployment_Tracking__c/fields/Master_OS_Linux__c.field-meta.xml
<CustomField>
    <fullName>Master_OS_Linux__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is checked if the Master OS is Linux.</description>
    <label>Master OS - Linux</label>
    <type>Checkbox</type>
</CustomField>