force-app/main/default/objects/Deployment_Tracking__c/fields/Master_OS_Solaris__c.field-meta.xml
<CustomField>
    <fullName>Master_OS_Solaris__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is checked if the Master OS is Solaris.</description>
    <label>Master OS - Solaris</label>
    <type>Checkbox</type>
</CustomField>