force-app/main/default/objects/Deployment_Tracking__c/fields/Master_OS_Version__c.field-meta.xml
<CustomField>
    <fullName>Master_OS_Version__c</fullName>
    <description>Version of the Master OS associated with a certain deployment.</description>
    <label>Master OS Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>