force-app/main/default/objects/Deployment_Tracking__c/fields/Master_TITAN_Version__c.field-meta.xml
<CustomField>
    <fullName>Master_TITAN_Version__c</fullName>
    <description>Version of the Master TITAN associated with a certain deployment.</description>
    <label>Master TITAN Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>