force-app/main/default/objects/Deployment_Tracking__c/fields/NP_Version__c.field-meta.xml
<CustomField>
    <fullName>NP_Version__c</fullName>
    <description>Version of the NP associated with a certain deployment.</description>
    <label>NP Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>