force-app/main/default/objects/Deployment_Tracking__c/fields/Number_of_Bridges__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bridges__c</fullName>
    <description>The number of bridges associated with a certain deployment.</description>
    <inlineHelpText>Put 0 if N/A</inlineHelpText>
    <label>Number of Bridges</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>