force-app/main/default/objects/Deployment_Tracking__c/fields/Number_of_Consumers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Consumers__c</fullName>
    <label>Number of Consumers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>