force-app/main/default/objects/Deployment_Tracking__c/fields/Number_of_Masters__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Masters__c</fullName>
    <description>The number of Masters associated with a certain deployment.</description>
    <label>Number of Masters</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>