force-app/main/default/objects/Deployment_Tracking__c/fields/Number_of_Nodes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Nodes__c</fullName>
    <label>Number of Nodes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>