force-app/main/default/objects/Deployment_Tracking__c/fields/Number_of_Producers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Producers__c</fullName>
    <label>Number of Producers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>