force-app/main/default/objects/Deployment_Tracking__c/fields/of_Signaling_Pod_Replicas__c.field-meta.xml
<CustomField>
    <fullName>of_Signaling_Pod_Replicas__c</fullName>
    <label># of Signaling Pod Replicas</label>
    <length>100</length>
    <type>Text</type>
</CustomField>