force-app/main/default/objects/Deployment_Tracking__c/fields/OS_Security_Patch_Revision__c.field-meta.xml
<CustomField>
    <fullName>OS_Security_Patch_Revision__c</fullName>
    <description>The Revision of the OS Security Patch associated with a certain deployment.</description>
    <label>OS Security Patch Revision</label>
    <length>100</length>
    <type>Text</type>
</CustomField>