force-app/main/default/objects/Deployment_Tracking__c/fields/Partner_Sales__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales__c</fullName>
    <description>This checkbox is checked if the deployment is associated with a partner reseller.</description>
    <formula>ISPICKVAL(Account_Name__r.Type, &quot;Partner Reseller&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Sales</label>
    <type>Checkbox</type>
</CustomField>