force-app/main/default/objects/Deployment_Tracking__c/fields/PCRF_Version__c.field-meta.xml
<CustomField>
    <fullName>PCRF_Version__c</fullName>
    <description>Version of the PCRF associated with a certain deployment.</description>
    <label>PCRF Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>