force-app/main/default/objects/Deployment_Tracking__c/fields/PEV_Version__c.field-meta.xml
<CustomField>
    <fullName>PEV_Version__c</fullName>
    <description>Version of the PEV associated with a certain deployment.</description>
    <label>PEV Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>