force-app/main/default/objects/Deployment_Tracking__c/fields/Protocol_IWF_Version__c.field-meta.xml
<CustomField>
    <fullName>Protocol_IWF_Version__c</fullName>
    <description>Version of the Protocol_IWF associated with a certain deployment.</description>
    <label>Protocol_IWF Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>