force-app/main/default/objects/Deployment_Tracking__c/fields/Provisioning_Version__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Version__c</fullName>
    <description>Version of the Provisioning associated with a certain deployment.</description>
    <label>Provisioning Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>