force-app/main/default/objects/Deployment_Tracking__c/fields/Red_Hat_PO__c.field-meta.xml
<CustomField>
    <fullName>Red_Hat_PO__c</fullName>
    <description>Tracked by the Sales Operations Manager.  Updated with the PO # when the PO is received.</description>
    <label>Red Hat PO#</label>
    <length>35</length>
    <type>Text</type>
</CustomField>