force-app/main/default/objects/Deployment_Tracking__c/fields/Red_Hat_Project__c.field-meta.xml
<CustomField>
    <fullName>Red_Hat_Project__c</fullName>
    <description>The project number related to the deployment tracking.</description>
    <label>Red Hat Project #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>