force-app/main/default/objects/Deployment_Tracking__c/fields/Red_Hat_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Red_Hat_Renewal_Date__c</fullName>
    <description>Tracked by the Sales Operations Manager.  The date of when Red Hat is to be renewed.  Typically one year but can be more, refer to the contract.</description>
    <label>Red Hat Renewal Date</label>
    <type>Date</type>
</CustomField>