force-app/main/default/objects/Deployment_Tracking__c/fields/RTA_Version__c.field-meta.xml
<CustomField>
    <fullName>RTA_Version__c</fullName>
    <description>Version of the RTA associated with a certain deployment.</description>
    <label>RTA Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>