force-app/main/default/objects/Deployment_Tracking__c/fields/SDM_Version_Master__c.field-meta.xml
<CustomField>
    <fullName>SDM_Version_Master__c</fullName>
    <description>Version of the SDM associated with a certain deployment.</description>
    <label>SDM Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>