force-app/main/default/objects/Deployment_Tracking__c/fields/SGF_ATF_Version__c.field-meta.xml
<CustomField>
    <fullName>SGF_ATF_Version__c</fullName>
    <description>Version of the SGF-ATF associated with a certain deployment.</description>
    <label>SGF-ATF Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>