force-app/main/default/objects/Deployment_Tracking__c/fields/SIP_Redirect_Version__c.field-meta.xml
<CustomField>
    <fullName>SIP_Redirect_Version__c</fullName>
    <description>Version of the SIP-Redirect associated with a certain deployment.</description>
    <label>SIP-Redirect Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>