force-app/main/default/objects/Deployment_Tracking__c/fields/SRP_Stateful_Version__c.field-meta.xml
<CustomField>
    <fullName>SRP_Stateful_Version__c</fullName>
    <description>Version of the SRP-Stateful associated with a certain deployment.</description>
    <label>SRP-Stateful Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>