force-app/main/default/objects/Deployment_Tracking__c/fields/SRP_Stateless_Version__c.field-meta.xml
<CustomField>
    <fullName>SRP_Stateless_Version__c</fullName>
    <description>Version of the SRP-Stateless associated with a certain deployment.</description>
    <label>SRP-Stateless Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>