force-app/main/default/objects/Deployment_Tracking__c/fields/SS7_FW_Version__c.field-meta.xml
<CustomField>
    <fullName>SS7_FW_Version__c</fullName>
    <description>Version of the SS7-FW associated with a certain deployment.</description>
    <label>SS7-FW Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>