force-app/main/default/objects/Deployment_Tracking__c/fields/SS7_Routing_Version__c.field-meta.xml
<CustomField>
    <fullName>SS7_Routing_Version__c</fullName>
    <description>Version of the SS7_Routing associated with a certain deployment.</description>
    <label>SS7_Routing Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>