force-app/main/default/objects/Deployment_Tracking__c/fields/STA_Version__c.field-meta.xml
<CustomField>
    <fullName>STA_Version__c</fullName>
    <description>Version of the STA associated with a certain deployment.</description>
    <label>STA Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>