force-app/main/default/objects/Deployment_Tracking__c/fields/STIR_SHAKEN_Version__c.field-meta.xml
<CustomField>
    <fullName>STIR_SHAKEN_Version__c</fullName>
    <label>STIR SHAKEN Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>