force-app/main/default/objects/Deployment_Tracking__c/fields/STP_Version__c.field-meta.xml
<CustomField>
    <fullName>STP_Version__c</fullName>
    <description>Version of the STP associated with a certain deployment.</description>
    <label>STP Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>