force-app/main/default/objects/Deployment_Tracking__c/fields/Support_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_Renewal_Date__c</fullName>
    <description>The date of the support renewal</description>
    <label>Support Renewal Date</label>
    <type>Date</type>
</CustomField>