force-app/main/default/objects/Deployment_Tracking__c/fields/Titan_8_Version__c.field-meta.xml
<CustomField>
    <fullName>Titan_8_Version__c</fullName>
    <label>Titan 8 Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>