force-app/main/default/objects/Deployment_Tracking__c/fields/Ubuntu_Support__c.field-meta.xml
<CustomField>
    <fullName>Ubuntu_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ubuntu Support</label>
    <type>Checkbox</type>
</CustomField>