force-app/main/default/objects/Deployment_Tracking__c/fields/Ubuntu_Version__c.field-meta.xml
<CustomField>
    <fullName>Ubuntu_Version__c</fullName>
    <label>Ubuntu Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>