force-app/main/default/objects/Deployment_Tracking__c/fields/UT_Proxy_AP_Version__c.field-meta.xml
<CustomField>
    <fullName>UT_Proxy_AP_Version__c</fullName>
    <description>Version of the UT Proxy-AP associated with a certain deployment.</description>
    <label>UT Proxy-AP Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>