force-app/main/default/objects/Deployment_Tracking__c/fields/VM_COTS__c.field-meta.xml
<CustomField>
    <fullName>VM_COTS__c</fullName>
    <label>VM/COTS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VM - Vmware</fullName>
            </value>
            <value>
                <fullName>VM - Openstack</fullName>
            </value>
            <value>
                <fullName>VM - Other</fullName>
            </value>
            <value>
                <fullName>COTS - HP DL380G10</fullName>
            </value>
            <value>
                <fullName>COTS - HP DL380G9</fullName>
            </value>
            <value>
                <fullName>COTS - HP DL360</fullName>
            </value>
            <value>
                <fullName>COTS - Genband</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>