force-app/main/default/objects/Deployment_Tracking__c/fields/VM_COTS_Info__c.field-meta.xml
<CustomField>
    <fullName>VM_COTS_Info__c</fullName>
    <label>VM/COTS Info</label>
    <type>TextArea</type>
</CustomField>