force-app/main/default/objects/Deployment_Tracking__c/recordTypes/Analytics.recordType-meta.xml
<RecordType>
    <fullName>Analytics</fullName>
    <active>true</active>
    <label>Analytics</label>
</RecordType>