force-app/main/default/objects/Deployment_Tracking__c/recordTypes/EMS.recordType-meta.xml
<RecordType>
    <fullName>EMS</fullName>
    <active>true</active>
    <label>EMS</label>
</RecordType>