force-app/main/default/objects/Deployment_Tracking__c/recordTypes/Titan_7.recordType-meta.xml
<RecordType>
    <fullName>Titan_7</fullName>
    <active>true</active>
    <label>Titan 7</label>
</RecordType>