force-app/main/default/objects/Deployment_Tracking__c/recordTypes/Titan_8.recordType-meta.xml
<RecordType>
    <fullName>Titan_8</fullName>
    <active>true</active>
    <label>Titan 8</label>
</RecordType>