force-app/main/default/objects/Deployment_Tracking__c/recordTypes/Titan_ium.recordType-meta.xml
<RecordType>
    <fullName>Titan_ium</fullName>
    <active>true</active>
    <label>Titan.ium</label>
</RecordType>