force-app/main/default/objects/Deployment_Tracking__c/validationRules/End_Customer_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Customer_is_Required</fullName>
    <active>true</active>
    <description>End Customer is Required when the account is a partner.</description>
    <errorConditionFormula>AND( 
ISPICKVAL(  Account_Name__r.Type  , &quot;Partner Reseller&quot;), 
ISBLANK(  End_Customer__c ) 
)</errorConditionFormula>
    <errorDisplayField>End_Customer__c</errorDisplayField>
    <errorMessage>End Customer is Required.</errorMessage>
</ValidationRule>